tests/baselines/reference/divergentAccessorsTypes5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
divergentAccessorsTypes5.ts(31,1): error TS2322: Type '42' is not assignable to type '"hello"'.
divergentAccessorsTypes5.ts(36,1): error TS2322: Type '"hello"' is not assignable to type '42'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== divergentAccessorsTypes5.ts (2 errors) ====
    // Not really different from divergentAccessorsTypes4.ts,
    // but goes through the deferred type code
    
    class One {
      get prop1(): string { return ""; }
      set prop1(s: string | number) { }
    
      prop2: number;
    }
    
    class Two {
      get prop1(): "hello" { return "hello"; }
      set prop1(s: "hello" | number) { }
    
      get prop2(): string { return ""; }
      set prop2(s: string | 42) { }
    
    }
    
    class Three {
      get prop1(): "hello" { return "hello"; }
      set prop1(s: "hello" | boolean) { }
    
      get prop2(): string { return ""; }
      set prop2(s: string | number | boolean) { }
    }
    
    declare const i: One & Two & Three;
    
    // "hello"
    i.prop1 = 42; // error
    ~~~~~~~
!!! error TS2322: Type '42' is not assignable to type '"hello"'.
    i.prop1 = "hello";
    
    // 42
    i.prop2 = 42;
    i.prop2 = "hello"; // error
    ~~~~~~~
!!! error TS2322: Type '"hello"' is not assignable to type '42'.
    